# musescore-scraper

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  VERSION  __init__.py  pyproject.toml  requirements.txt  script.js  setup.cfg  setup.py
docs/source/: conf.py  index.md  index.rst  modules.md  modules.rst  musescore_scraper.md  musescore_scraper.rst
musescore_scraper/: MuseScraper.py  __init__.py  helper.py  script.js
test/: test_MuseScraper.py  test_main.py
test/testdata/: pyppeteer_example_data.json
