[metadata]
name = musescore_scraper
version = file: VERSION
description = A MuseScore PDF scraper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasyip/musescore-scraper
author = Jason Yip
author_email = jasonyip1234567@gmail.com
license = MIT
keywords =
    musescore
    pdf
    scraper
classifiers =
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
packages = find:
install_requires =
    PyPDF2
    pyppeteer
    reportlab
    requests
    svglib

[options.extras_require]
docs =
    sphinx
    myst-parser
test =
    pytest
    pytest-asyncio

[options.package_data]
musescore_scraper = script.js

[options.entry_points]
console_scripts =
    musescraper = musescore_scraper:_main
